Response entity added

--- a/Spring-Boot-Journal-App/src/main/resources/application.properties
+++ b/Spring-Boot-Journal-App/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=Spring-Boot-Journal-App
 spring.db.mongodb.host= localhost
 spring.db.mongodb.port=27017
 spring.db.mongodb.database=journal
+spring.db.mongodb.auto-index-creation=true
